# avg-simu

./: Makefile  README.md
centroid-error/plots/: Makefile  profile-noise.gnuplot  profile-random.gnuplot  profile-width.gnuplot  profile.gnuplot
centroid-error/src/: CMakeLists.txt  main.cpp  standalone.cmake
plots/: .gitignore  Makefile  adc_linearity.gnuplot  aperture-jitter.gnuplot  averaged_waveform.gnuplot  constants.gnuplot  counting_waveform.gnuplot  counting_waveform2.gnuplot  digital_averaging.gnuplot  functions.gnuplot  pdf.gnuplot  phd.gnuplot  pkd+avg.gnuplot  pkd+avg2.gnuplot  profile.gnuplot  profile1.gnuplot  profile2.gnuplot  rms.gnuplot  saturation.gnuplot  saturation_waveform.gnuplot  signal-to-noise.gnuplot  signal-to-noise_linear.gnuplot  single_waveform.gnuplot  single_waveform_40.gnuplot  single_waveform_mz.gnuplot  waveform.gnuplot
src/: CMakeLists.txt  cauchy.cpp  main.cpp  pdf.cpp  standalone.cmake
